tests/fail/panic/fiber_switch_in_unwind.stderr

thread 'main' ($TID) panicked at tests/fail/panic/fiber_switch_in_unwind.rs:LL:CC:
unwind
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
note: in Miri, you may have to set `MIRIFLAGS=-Zmiri-env-forward=RUST_BACKTRACE` for the environment variable to have an effect
error: unsupported operation: Thread main requested a fiber switch while unwinding
  --> tests/fail/panic/fiber_switch_in_unwind.rs:LL:CC
   |
LL | ...   utils::miri_fiber_exit_to(PARENT_FIBER.load(Ordering::Relaxed));
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsupported operation occurred here
   |
   = help: this is likely not a bug in the program; it indicates that the program performed an operation that Miri does not support
   = note: stack backtrace:
           0: <fiber_body::ExitOnDrop as std::ops::Drop>::drop
               at tests/fail/panic/fiber_switch_in_unwind.rs:LL:CC
           1: std::ptr::drop_in_place - shim(Some(fiber_body::ExitOnDrop))
               at RUSTLIB/core/src/ptr/mod.rs:LL:CC
           2: fiber_body::{closure#0}
               at tests/fail/panic/fiber_switch_in_unwind.rs:LL:CC
           3: std::panicking::catch_unwind::do_call
               at RUSTLIB/std/src/panicking.rs:LL:CC
           4: std::panicking::catch_unwind
               at RUSTLIB/std/src/panicking.rs:LL:CC
           5: std::panic::catch_unwind
               at RUSTLIB/std/src/panic.rs:LL:CC
           6: fiber_body
               at tests/fail/panic/fiber_switch_in_unwind.rs:LL:CC
note: the last function in that backtrace got called indirectly due to this code
  --> tests/fail/panic/fiber_switch_in_unwind.rs:LL:CC
   |
LL |         let fiber = utils::miri_fiber_create(fiber_body, core::ptr::null_mut());
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

